--- a/reveal.js/index.html
+++ b/reveal.js/index.html
@@ -24,6 +24,13 @@
 	<body>
 		<div class="reveal">
 			<div class="slides">
+				<!-- Intro -->
+				<section>
+					<h3>Nuevas siete maravillas del mundo moderno</h3>
+					Se denominan las nuevas siete maravillas del mundo moderno a los monumentos que resultaron ganadores en un concurso público e internacional celebrado en 2007, inspirado en la lista de las siete maravillas del mundo antiguo y realizado por una empresa privada de nombre New Open World Corporation.
+				</section>
+
+
 				<section>Slide 1</section>
 				<section>Slide 2</section>
 				<section>Slide 3</section>
