--- a/reveal.js/index.html
+++ b/reveal.js/index.html
@@ -30,8 +30,12 @@
 					Se denominan las nuevas siete maravillas del mundo moderno a los monumentos que resultaron ganadores en un concurso público e internacional celebrado en 2007, inspirado en la lista de las siete maravillas del mundo antiguo y realizado por una empresa privada de nombre New Open World Corporation.
 				</section>
 
+				<!-- Slide 1 -->
+				<section>
+					<h3>Machu Picchu</h3>
+					Machu Picchu (Machu Pikchu AFI: [ˌmɑtʃu ˈpiktʃu] en quechua, «Montaña Vieja») es el nombre contemporáneo que se da a una llaqta —antiguo poblado andino— incaica construida antes del siglo XV, ubicada en la Cordillera Oriental del sur de Perú, en una cadena montañosa a 2,430 metros (7,970 pies) sobre el nivel del mar.
+				</section>
 
-				<section>Slide 1</section>
 				<section>Slide 2</section>
 				<section>Slide 3</section>
 				<section>Slide 4</section>
