--- a/reveal.js/index.html
+++ b/reveal.js/index.html
@@ -36,7 +36,13 @@
 					Machu Picchu (Machu Pikchu AFI: [ˌmɑtʃu ˈpiktʃu] en quechua, «Montaña Vieja») es el nombre contemporáneo que se da a una llaqta —antiguo poblado andino— incaica construida antes del siglo XV, ubicada en la Cordillera Oriental del sur de Perú, en una cadena montañosa a 2,430 metros (7,970 pies) sobre el nivel del mar.
 				</section>
 
-				<section>Slide 2</section>
+				<!-- Slide 2 -->
+				<section>
+					<h3>Chichén Itzá</h3>
+					Chichén Itzá es uno de los principales sitios arqueológicos de la península de Yucatán, en México. Está ubicado en el municipio de Tinum, en el estado de Yucatán. Consistió en una ciudad​ o un centro ceremonial, que pasó por diversas épocas constructivas e influencias de los distintos pueblos que la ocuparon y que la impulsaron desde su fundación.
+				</section>
+
+
 				<section>Slide 3</section>
 				<section>Slide 4</section>
 				<section>Slide 5</section>
