--- a/reveal.js/index.html
+++ b/reveal.js/index.html
@@ -42,8 +42,11 @@
 					Chichén Itzá es uno de los principales sitios arqueológicos de la península de Yucatán, en México. Está ubicado en el municipio de Tinum, en el estado de Yucatán. Consistió en una ciudad​ o un centro ceremonial, que pasó por diversas épocas constructivas e influencias de los distintos pueblos que la ocuparon y que la impulsaron desde su fundación.
 				</section>
 
-
-				<section>Slide 3</section>
+				<!-- Slide 3 -->
+				<section>
+					<h3>El Coliseo Romano</h3>
+					El Coliseo o Anfiteatro Flavio es un anfiteatro de la época del Imperio romano, construido en el siglo I y ubicado en el centro de la ciudad de Roma. Su denominación original, Anfiteatro Flavio, hace referencia a la dinastía Flavia de emperadores que lo construyó; su nombre posterior, Coliseo, y por el que es más conocido en la actualidad, se debe a una gran estatua que había cerca, el Coloso de Nerón, que no ha llegado hasta nosotros.
+				</section>
 				<section>Slide 4</section>
 				<section>Slide 5</section>
 				<section>Slide 6</section>
