--- a/reveal.js/index.html
+++ b/reveal.js/index.html
@@ -47,7 +47,12 @@
 					<h3>El Coliseo Romano</h3>
 					El Coliseo o Anfiteatro Flavio es un anfiteatro de la época del Imperio romano, construido en el siglo I y ubicado en el centro de la ciudad de Roma. Su denominación original, Anfiteatro Flavio, hace referencia a la dinastía Flavia de emperadores que lo construyó; su nombre posterior, Coliseo, y por el que es más conocido en la actualidad, se debe a una gran estatua que había cerca, el Coloso de Nerón, que no ha llegado hasta nosotros.
 				</section>
-				<section>Slide 4</section>
+
+				<!-- Slide 4 -->
+				<section>
+					<h3>Cristo Redentor</h3>
+					El Cristo Redentor o Cristo del Corcovado es una enorme estatua de Jesús de Nazaret con los brazos abiertos mostrando a la ciudad de Río de Janeiro, Brasil. La estatua tiene una altura de 30,1 metros más un pedestal de 8 metros1​ . Está situada a 710 metros sobre el nivel del mar en el Parque Nacional de la Tijuca,en la cima del Cerro del Corcovado y puede ser visto desde casi todos los lugares de Río de Janeiro.
+				</section>
 				<section>Slide 5</section>
 				<section>Slide 6</section>
 				<section>Slide 7</section>
