--- a/reveal.js/index.html
+++ b/reveal.js/index.html
@@ -53,7 +53,12 @@
 					<h3>Cristo Redentor</h3>
 					El Cristo Redentor o Cristo del Corcovado es una enorme estatua de Jesús de Nazaret con los brazos abiertos mostrando a la ciudad de Río de Janeiro, Brasil. La estatua tiene una altura de 30,1 metros más un pedestal de 8 metros1​ . Está situada a 710 metros sobre el nivel del mar en el Parque Nacional de la Tijuca,en la cima del Cerro del Corcovado y puede ser visto desde casi todos los lugares de Río de Janeiro.
 				</section>
-				<section>Slide 5</section>
+
+				<!-- Slide 5 -->
+				<section>
+					<h3>Gran Muralla China</h3>
+					La Gran Muralla China es una antigua fortificación china construida y reconstruida entre el siglo V a. C. y el siglo XVI (Edad Moderna) para proteger la frontera norte del Imperio chino durante las sucesivas dinastías imperiales de los ataques de los nómadas xiongnu de Mongolia y Manchuria.
+				</section>
 				<section>Slide 6</section>
 				<section>Slide 7</section>
 			</div>
