--- a/reveal.js/index.html
+++ b/reveal.js/index.html
@@ -59,7 +59,12 @@
 					<h3>Gran Muralla China</h3>
 					La Gran Muralla China es una antigua fortificación china construida y reconstruida entre el siglo V a. C. y el siglo XVI (Edad Moderna) para proteger la frontera norte del Imperio chino durante las sucesivas dinastías imperiales de los ataques de los nómadas xiongnu de Mongolia y Manchuria.
 				</section>
-				<section>Slide 6</section>
+
+				<!-- Slide 6 -->
+				<section>
+					<h3>Ciudad de Petra</h3>
+					Petra es un importante enclave arqueológico en Jordania, y la capital del antiguo reino nabateo, cuyos pobladores la llamaban Raqmu. El nombre de Petra proviene del griego πέτρα que significa piedra, y su nombre es perfectamente idóneo; no se trata de una ciudad construida con piedra sino, literalmente, excavada y esculpida en la piedra.
+				</section>
 				<section>Slide 7</section>
 			</div>
 		</div>
