--- a/reveal.js/index.html
+++ b/reveal.js/index.html
@@ -65,7 +65,12 @@
 					<h3>Ciudad de Petra</h3>
 					Petra es un importante enclave arqueológico en Jordania, y la capital del antiguo reino nabateo, cuyos pobladores la llamaban Raqmu. El nombre de Petra proviene del griego πέτρα que significa piedra, y su nombre es perfectamente idóneo; no se trata de una ciudad construida con piedra sino, literalmente, excavada y esculpida en la piedra.
 				</section>
-				<section>Slide 7</section>
+
+				<!-- Slide 7 -->
+				<section>
+					<h3>Taj Mahal</h3>
+					El Taj Mahal es un monumento funerario construido entre 1631 y 1654 en la ciudad de Agra, estado de Uttar Pradesh (India), a orillas del río Yamuna, por el emperador musulmán Shah Jahan de la dinastía mogol. El imponente conjunto de edificios se erigió en honor de su esposa, quien murió en el parto de su decimocuarta hija.
+				</section>
 			</div>
 		</div>
 
